manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spirit-dns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spirit-dns
  template:
    metadata:
      labels:
        app: spirit-dns
    spec:
      containers:
        - name: spirit-dns
          image: richard1227/spirit_dns
          ports:
            - containerPort: 8080
