manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spirit-dns-service
spec:
  selector:
    app: spirit-dns
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
