manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spirit-dns-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - "sp1rit.me"
      secretName: spirit-dns-secret
  rules:
    - host: "sp1rit.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spirit-dns-service
                port:
                  number: 443
